metadata/force-app/main/default/objects/CustomName_UIlNZ__c/CustomName_UIlNZ__c.object-meta.xml
<CustomObject>
    <description>Description_kEdlZ</description>
    <label>CustomLabel_enuVj</label>
    <nameField>
        <label>CustomLabel_enuVj</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_enuVjs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>