metadata/force-app/main/default/objects/CustomName_UIlNZ__c/fields/CustomField_sjKch__c.field-meta.xml
<CustomField>
    <fullName>CustomField_sjKch__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldXdVYo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>