metadata/force-app/main/default/objects/CustomName_UIlNZ__c/fields/CustomField_WRImf__c.field-meta.xml
<CustomField>
    <fullName>CustomField_WRImf__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldAfjLR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>